--- a/Styles/style.css
+++ b/Styles/style.css
@@ -4,16 +4,26 @@ h1 {
   color: #111111;
 }
 
-.navlist ul {
-  list-style-type: none;
-}
-
-.navlist li {
-  float: left;
-}
-
 .navlist {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+}
+
+.navlist ul {
+  list-style-type: none;
+  float: left;
+}
+
+.grid-container {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: repeat(32, 1fr);
+  grid-template-columns: repeat(9, 2fr);
+}
+
+.grid-item-1 {
+  grid-row: 1/7;
+  grid-column: 1/3;
 }/*# sourceMappingURL=style.css.map */
