--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -9,9 +9,20 @@ h1 {
   justify-content: flex-end;
   align-items: flex-end;
 }
-&:li {
+.navlist ul {
+  list-style-type: none;
   float: left;
 }
-&:ul {
-  list-style-type: none;
+
+.grid-container {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: repeat(32, 1fr);
+  grid-template-columns: repeat(9, 2fr);
+}
+
+.grid-item-1 {
+  grid-row: 1 / 7;
+  grid-column: 1 / 3;
 }
