--- a/Styles/style.css
+++ b/Styles/style.css
@@ -15,6 +15,23 @@ h1 {
   float: left;
 }
 
+p {
+  max-width: 635px;
+  width: 100%;
+  min-height: 251px;
+  position: relative;
+  left: 100px;
+  font-size: 40px;
+  font-weight: bold;
+  letter-spacing: 0;
+  line-height: 60px;
+  color: #111111;
+}
+
+span {
+  color: #4a4ff2;
+}
+
 .grid-container {
   max-width: 1110px;
   margin: 0 auto;
