--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -1,3 +1,6 @@
+* {
+  font-family: "Mulish", sans-serif;
+}
 h1 {
   padding-top: 24px;
   text-align: start;
@@ -10,8 +13,14 @@ h1 {
   align-items: flex-end;
 }
 .navlist ul {
+  display: flex;
+  justify-content: space-between;
   list-style-type: none;
   float: left;
+}
+
+li {
+  padding: 20px;
 }
 
 p {
@@ -106,4 +115,11 @@ span {
 .grid-item-12 {
   grid-row: 26 / 32;
   grid-column: 7 / 10;
+}
+
+.icon {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 30px;
 }
