--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,7 +2,7 @@
   font-family: "Mulish", sans-serif;
 }
 
-h1 {
+.logo {
   padding-top: 24px;
   text-align: start;
   color: #111111;
@@ -12,6 +12,8 @@ h1 {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .navlist ul {
