--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -1,7 +1,8 @@
 * {
   font-family: "Mulish", sans-serif;
 }
-h1 {
+
+.logo {
   padding-top: 24px;
   text-align: start;
   color: #111111;
@@ -11,6 +12,8 @@ h1 {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  font-weight: bold;
+  font-size: 18px;
 }
 .navlist ul {
   display: flex;
