saved links to contacts and projects pages

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -127,4 +127,6 @@ span {
   display: flex;
   justify-content: space-between;
   font-size: 30px;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/* PROJECTS PAGE*//*# sourceMappingURL=style.css.map */
