--- a/Styles/style.css
+++ b/Styles/style.css
@@ -125,6 +125,26 @@ span {
   grid-column: 7/10;
 }
 
+.after-images {
+  display: flex;
+  justify-content: space-between;
+}
+
+.horizontal-line {
+  width: 80%;
+  height: 2px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 200px;
+  margin-bottom: 90px;
+  background-color: #d8d8d8;
+}
+
+.awards {
+  display: flex;
+  justify-content: space-between;
+}
+
 .icon {
   padding: 20px;
   display: flex;
@@ -132,4 +152,20 @@ span {
   font-size: 30px;
 }
 
-/* PROJECTS PAGE*//*# sourceMappingURL=style.css.map */
+/* PROJECTS PAGE*/
+h2 {
+  max-width: 635px;
+  min-height: 222px;
+  font-size: 40px;
+  font-weight: bold;
+  line-height: 55px;
+  letter-spacing: 0;
+}
+
+.project-text {
+  padding-top: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0;
+}/*# sourceMappingURL=style.css.map */
