--- a/Styles/style.css
+++ b/Styles/style.css
@@ -30,6 +30,16 @@ li:hover {
   text-decoration: underline;
 }
 
+h3 {
+  position: relative;
+  left: 100px;
+  font-size: 22px;
+  font-weight: bold;
+  letter-spacing: -0.42px;
+  line-height: auto;
+  color: #4a4ff2;
+}
+
 p {
   max-width: 635px;
   width: 100%;
