--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -217,3 +217,25 @@ h2 {
   line-height: 26px;
   letter-spacing: 0;
 }
+
+.project-list {
+  display: inline-block;
+  position: relative;
+  left: 100px;
+}
+
+.pro {
+  display: inline-block;
+}
+
+.walking-img {
+  width: 1110px;
+  width: 100%;
+  min-height: 660px;
+}
+
+.bottom-images {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
