--- a/Styles/style.css
+++ b/Styles/style.css
@@ -52,8 +52,7 @@ p {
   line-height: 60px;
   color: #111111;
 }
-
-span {
+p span {
   color: #4a4ff2;
 }
 
@@ -64,8 +63,7 @@ span {
   justify-content: flex-end;
   position: relative;
 }
-
-.quote::after {
+.quote .quote::after {
   content: "";
   display: inline-block;
   width: 30px;
@@ -188,7 +186,6 @@ span {
 .awards-2 {
   width: 100%;
   height: 100%;
-  margin: auto;
   display: flex;
   justify-content: space-around;
   font-weight: bold;
@@ -205,6 +202,8 @@ span {
 h2 {
   max-width: 635px;
   min-height: 222px;
+  position: relative;
+  left: 100px;
   font-size: 40px;
   font-weight: bold;
   line-height: 55px;
@@ -220,13 +219,20 @@ h2 {
 }
 
 .project-list {
-  display: inline-block;
-  position: relative;
-  left: 100px;
+  max-width: 335px;
+  width: 100%;
+  min-height: 343px;
+  display: inline-flex;
 }
 
 .pro {
-  display: inline-block;
+  float: right;
+  position: relative;
+  right: 100px;
+}
+
+.pro-1 {
+  float: left;
 }
 
 .walking-img {
@@ -246,6 +252,7 @@ form {
   max-width: 475px;
   width: 100%;
   min-height: 291px;
+  float: right;
 }
 
 input[type=text],
@@ -256,8 +263,8 @@ input[type=email] {
   box-sizing: border-box;
   border-bottom: 1px solid #d8d8d8;
 }
-
-.message-area {
+input[type=text] .message-area,
+input[type=email] .message-area {
   padding: 12px 20px;
   margin: 0;
   box-sizing: border-box;
@@ -275,7 +282,9 @@ button {
   color: #ffffff;
 }
 
-button:hover {
-  background-color: black;
-  color: white;
+.img-centre {
+  max-width: 1110px;
+  margin: 0 auto;
+  width: 100%;
+  min-height: 570px;
 }/*# sourceMappingURL=style.css.map */
