--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,11 +1,7 @@
-* {
-  font-family: "Mulish", sans-serif;
-}
-
+/* AND FOOTER*/
 .logo {
   padding-top: 24px;
   text-align: start;
-  color: #111111;
 }
 
 .navlist {
@@ -28,6 +24,18 @@ li {
 }
 li:hover {
   text-decoration: underline;
+}
+
+.icon {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 30px;
+}
+
+* {
+  background-color: #f2f2f2;
+  font-family: "mulish", sans-serif;
 }
 
 h3 {
@@ -73,6 +81,44 @@ p span {
   top: -15px;
   left: 0;
   transform: translate(0, -50%);
+}
+
+.after-images {
+  display: flex;
+  justify-content: space-between;
+}
+
+.horizontal-line {
+  width: 80%;
+  height: 2px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 200px;
+  margin-bottom: 90px;
+  background-color: #d8d8d8;
+}
+
+.awards {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+}
+
+.ui-kit {
+  max-width: 190px;
+  min-height: 104px;
+  position: relative;
+  left: -10px;
+}
+
+.awards-2 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  font-weight: bold;
 }
 
 .grid-container {
@@ -153,51 +199,6 @@ p span {
   grid-column: 7/10;
 }
 
-.after-images {
-  display: flex;
-  justify-content: space-between;
-}
-
-.horizontal-line {
-  width: 80%;
-  height: 2px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 200px;
-  margin-bottom: 90px;
-  background-color: #d8d8d8;
-}
-
-.awards {
-  width: 100%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
-}
-
-.ui-kit {
-  max-width: 190px;
-  min-height: 104px;
-  position: relative;
-  left: -10px;
-}
-
-.awards-2 {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-around;
-  font-weight: bold;
-}
-
-.icon {
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  font-size: 30px;
-}
-
 /* PROJECTS PAGE*/
 h2 {
   max-width: 635px;
@@ -208,6 +209,7 @@ h2 {
   font-weight: bold;
   line-height: 55px;
   letter-spacing: 0;
+  color: #111111;
 }
 
 .project-text {
