--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -1,201 +1,8 @@
-* {
-  font-family: "Mulish", sans-serif;
-}
+$text-color: #111111;
 
-.logo {
-  padding-top: 24px;
-  text-align: start;
-  color: #111111;
-}
-
-.navlist {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  font-weight: bold;
-  font-size: 18px;
-}
-
-.navlist ul {
-  display: flex;
-  justify-content: space-between;
-  list-style-type: none;
-  float: left;
-}
-
-li {
-  padding: 20px;
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-h3 {
-  position: relative;
-  left: 100px;
-  font-size: 22px;
-  font-weight: bold;
-  letter-spacing: -0.42px;
-  line-height: auto;
-  color: #4a4ff2;
-}
-
-p {
-  max-width: 635px;
-  width: 100%;
-  min-height: 251px;
-  position: relative;
-  left: 100px;
-  font-size: 40px;
-  font-weight: bold;
-  letter-spacing: 0;
-  line-height: 60px;
-  color: #111111;
-  & span {
-    color: #4a4ff2;
-  }
-}
-
-.quote {
-  width: 100%;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  position: relative;
-  & .quote::after {
-    content: "";
-    display: inline-block;
-    width: 30px;
-    height: 2px;
-    background-color: #d8d8d8;
-    position: absolute;
-    top: -15px;
-    left: 0;
-    transform: translate(0, -50%);
-  }
-}
-
-.grid-container {
-  max-width: 1110px;
-  margin: 0 auto;
-  width: 100%;
-  min-height: 1960px;
-  height: 100vh;
-  display: grid;
-  grid-template-rows: repeat(32, 1fr);
-  grid-template-columns: repeat(9, 1fr);
-  gap: 23px;
-
-  & img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-}
-
-.grid-item-1 {
-  grid-row: 1 / 8;
-  grid-column: 1 / 4;
-}
-
-.grid-item-2 {
-  grid-row: 8 / 17;
-  grid-column: 1 / 4;
-}
-
-.grid-item-3 {
-  grid-row: 17 / 25;
-  grid-column: 1 / 4;
-}
-
-.grid-item-4 {
-  grid-row: 25 / 32;
-  grid-column: 1 / 4;
-}
-
-.grid-item-5 {
-  grid-row: 1 / 7;
-  grid-column: 4 / 7;
-}
-.grid-item-6 {
-  grid-row: 7 / 15;
-  grid-column: 4 / 7;
-}
-
-.grid-item-7 {
-  grid-row: 15 / 21;
-  grid-column: 4 / 7;
-}
-
-.grid-item-8 {
-  grid-row: 21 / 32;
-  grid-column: 4 / 7;
-}
-
-.grid-item-9 {
-  grid-row: 1 / 9;
-  grid-column: 7 / 10;
-}
-
-.grid-item-10 {
-  grid-row: 9 / 18;
-  grid-column: 7 / 10;
-}
-
-.grid-item-11 {
-  grid-row: 18 / 26;
-  grid-column: 7 / 10;
-}
-
-.grid-item-12 {
-  grid-row: 26 / 32;
-  grid-column: 7 / 10;
-}
-
-.after-images {
-  display: flex;
-  justify-content: space-between;
-}
-
-.horizontal-line {
-  width: 80%;
-  height: 2px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 200px;
-  margin-bottom: 90px;
-  background-color: #d8d8d8;
-}
-
-.awards {
-  width: 100%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
-}
-
-.ui-kit {
-  max-width: 190px;
-  min-height: 104px;
-  position: relative;
-  left: -10px;
-}
-
-.awards-2 {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-around;
-  font-weight: bold;
-}
-
-.icon {
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  font-size: 30px;
-}
+@import "./header";
+@import "./main";
+@import "./grid";
 
 /* PROJECTS PAGE*/
 h2 {
@@ -207,6 +14,7 @@ h2 {
   font-weight: bold;
   line-height: 55px;
   letter-spacing: 0;
+  color: $text-color;
 }
 
 .project-text {
