--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -1,5 +1,19 @@
-$text-color: #111111;
+@mixin flexEnd() {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+@mixin spaceBtwn() {
+  display: flex;
+  justify-content: space-between;
+}
 
+@mixin relative100() {
+  position: relative;
+  left: 100px;
+}
+
+@import "./variables";
 @import "./header";
 @import "./main";
 @import "./grid";
@@ -8,8 +22,7 @@ $text-color: #111111;
 h2 {
   max-width: 635px;
   min-height: 222px;
-  position: relative;
-  left: 100px;
+  @include relative100();
   font-size: 40px;
   font-weight: bold;
   line-height: 55px;
