--- a/Styles/_main.scss
+++ b/Styles/_main.scss
@@ -1,40 +1,36 @@
 * {
-  background-color: #f2f2f2;
-  font-family: "mulish", sans-serif;
+  background-color: $bg-color;
+  font-family: $font-fam, sans-serif;
 }
 
 h3 {
-  position: relative;
-  left: 100px;
+  @include relative100();
   font-size: 22px;
   font-weight: bold;
   letter-spacing: -0.42px;
   line-height: auto;
-  color: #4a4ff2;
+  color: $span-color;
 }
 
 p {
   max-width: 635px;
   width: 100%;
   min-height: 251px;
-  position: relative;
-  left: 100px;
+  @include relative100();
   font-size: 40px;
   font-weight: bold;
   letter-spacing: 0;
   line-height: 60px;
   color: $text-color;
+
   & span {
-    color: #4a4ff2;
+    color: $span-color;
   }
 }
 
 .quote {
   width: 100%;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  position: relative;
+  @include flexEnd();
   & .quote::after {
     content: "";
     display: inline-block;
@@ -49,8 +45,7 @@ p {
 }
 
 .after-images {
-  display: flex;
-  justify-content: space-between;
+  @include spaceBtwn();
 }
 
 .horizontal-line {
@@ -66,8 +61,7 @@ p {
 .awards {
   width: 100%;
   margin: auto;
-  display: flex;
-  justify-content: space-between;
+  @include spaceBtwn();
   font-weight: bold;
 }
 
